welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: not found: value k
		if((occurrences(nums,k))==3){
                                     ^